# vCell

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
configs/: default.yaml  drugseq_prep.yaml
data/: seahorse_vAssay_validation.csv
data/vassay_train/: train_C1.csv  train_C12.csv  train_C14.csv  train_C24.csv
docs/: plan_BA_multimodal_virtual_cell_EE.md  research_plan_EE_drugseq.md  vassay_review.marp.md
scripts/: align_multimodal.py  analyze_multimodal.py  ba_cn_onepager.py  ba_crossmodal_moa.py  ba_dino_space.py  ba_moa_story.py  ba_multimodal_benchmark.py  ba_state_atlas.py  dino_pathway_prediction.py  dino_pathway_similarity.py  ee_drugseq_benchmark.py  ee_drugseq_next_steps.py  ee_drugseq_report.py  ee_similarity_atlas.py  generate_synthetic_data.py  inventory_images.py  pathway_phenotype_visualization.py  prep_drugseq.py  report_drugseq.py  tox_prediction_benchmark.py  train.py  transcript_tmrm_prediction.py  validate_seahorse.py  vassay_benchmark.py  vassay_crossdomain.py  vassay_summary.py  vassay_systematic_benchmark.py
src/vcell/: __init__.py  cli.py
src/vcell/benchmark/: __init__.py  ee_drugseq.py
src/vcell/data/: __init__.py  dataset.py  drugseq.py  multimodal.py  synthetic.py
src/vcell/models/: __init__.py  encoder.py  perturbation.py  vcell_model.py
src/vcell/train/: __init__.py  losses.py  trainer.py
src/vcell/utils/: __init__.py  config.py  (+2 more)
tests/: test_benchmark.py  test_data.py  test_drugseq_prep.py  test_ee_drugseq_benchmark.py  test_metrics.py  test_model.py  test_multimodal.py  test_trainer.py  test_vassay.py
(+1 files in other folders)
