[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcell"
version = "0.1.0"
description = "Virtual cell perturbation-response model (latent-additive conditional VAE)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Qiuye Jin" }]
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
scrna = ["anndata>=0.9", "scanpy>=1.9"]

[project.scripts]
vcell = "vcell.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
